Added examples of AdjacencyList implementation